fix: update badge icons and styles for temperature measures to improve visibility

--- a/frontend/src/app/home-measure/panel-card/panel-card.component.scss
+++ b/frontend/src/app/home-measure/panel-card/panel-card.component.scss
@@ -67,4 +67,12 @@
   display: none;
 }
 
+.badge-font-size {
+  font-size: .5rem;
+}
+
+.badge-color-white {
+  color: white !important;
+}
+
 
